--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "apollo-boost": "^0.4.9",
     "apollo-server-express": "^2.19.1",
+    "dotenv": "^10.0.0",
     "if-env": "^1.0.4"
   },
   "devDependencies": {
